feat: banck exemple add get-account
